[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu/HUD.gd" type="Script" id=1]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Pause" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="lbl_Name" type="Label" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 0.1
text = "Menu "
align = 1
valign = 1

[node name="btn_Resume" type="Button" parent="Pause"]
margin_left = 440.0
margin_top = 220.0
margin_right = 590.0
margin_bottom = 240.0
text = "Resume"

[node name="btn_Load_Game" type="Button" parent="Pause"]
margin_left = 440.0
margin_top = 250.0
margin_right = 590.0
margin_bottom = 270.0
text = "Load Game"

[node name="btn_Save_Game" type="Button" parent="Pause"]
margin_left = 440.0
margin_top = 280.0
margin_right = 590.0
margin_bottom = 300.0
text = "Save Game"

[node name="btn_Options" type="Button" parent="Pause"]
margin_left = 440.0
margin_top = 310.0
margin_right = 590.0
margin_bottom = 330.0
text = "Options"

[node name="btn_Quit" type="Button" parent="Pause"]
margin_left = 440.0
margin_top = 360.0
margin_right = 590.0
margin_bottom = 380.0
text = "Quit"
